# Yandex_M8_CodeRefactor

./: ANALYSIS_RESULTS.md  CMakeLists.txt  README.md  check_refactor.sh
.devcontainer/: Dockerfile  devcontainer.json
include/: RefactorTool.h
src/: CMakeLists.txt  RefactorTool.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/tests_data/: for_refactor.cpp  for_refactor_fixed.cpp  leak_example.cpp  leak_example_fixed.cpp  perf_example.cpp  perf_example_fixed.cpp  test1.cpp  test1_ref.cpp  test2.cpp  test2_ref.cpp  test3.cpp  test3_ref.cpp
tests/tests_data/tmp/: test1.cpp
